--- a/app/package.json
+++ b/app/package.json
@@ -6,30 +6,24 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "inline-worker": "^1.1.0",
     "jss": "^5.5.2",
     "jss-preset-default": "^0.4.0",
     "mobx": "^2.5.1",
     "mobx-react": "^3.5.6",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "recorderjs": "^1.0.1",
-    "wav-encoder": "^1.1.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
-    "babel-plugin-css-in-js": "^1.4.0",
-    "babel-polyfill": "^6.13.0",
     "babel-preset-aria": "^1.3.0",
     "babel-preset-react": "^6.11.1",
     "eslint": "^3.5.0",
     "eslint-config-aria": "^4.0.4",
     "eslint-config-aria-react": "^1.0.6",
-    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.2"
+    "webpack-dev-server": "^1.16.0"
   }
 }
