--- a/server/api/package.json
+++ b/server/api/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
-    "wav-encoder": "^1.1.0"
+    "mongodb": "^2.2.10",
+    "node-fetch": "^1.6.1"
   },
   "devDependencies": {
     "eslint": "^3.5.0",
