--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": ["aria", "aria-react"],
   "rules": {
     "func-style": 0,
-    "arrow-parens": 0
+    "arrow-parens": 0,
+    "default-case": 0
   }
 }
